scripts/nullaway/annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8.txt
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/EvaluacionTeoria.java:20: error: [NullAway] @NonNull field aciertos_entradas not initialized
    int[] aciertos_entradas;
          ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/EvaluacionTeoria.java:70: error: [NullAway] dereferenced expression fallos_entradas is @Nullable
            sb.append(fallos_entradas[i]).append('\t');
                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/EvaluacionTeoria.java:86: error: [NullAway] dereferenced expression aciertos_muestras is @Nullable
            sb.append(aciertos_muestras[i]).append('\t');
                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/EvaluacionTeoria.java:92: error: [NullAway] dereferenced expression fallos_muestras is @Nullable
            sb.append(fallos_muestras[i]).append('\t');
                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/TDFPG.java:398: error: [NullAway] dereferenced expression p.getElemento() is @Nullable
            sb.append(p.getElemento().toString()).append(" ").append(p.getApariciones()).append("\n");
                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/InfoElemento.java:21: error: [NullAway] unboxing of a @Nullable value
        return (float)getApariciones()/(float)getTotal();
                                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/InfoElemento.java:56: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return apariciones;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Regla.java:21: error: [NullAway] initializer method does not guarantee @NonNull fields antecedente (line 14), consecuente (line 15) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Regla() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Nodo.java:85: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return padre;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Contradiccion.java:68: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return antecedente;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Delayer.java:61: error: [NullAway] dereferenced expression llamable is @Nullable
        llamable.recibir();
                ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:71: error: [NullAway] initializer method does not guarantee @NonNull fields historia_interna (line 58), cuentas (line 62), itemsets (line 68) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Hipo() {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:74: error: [NullAway] initializer method does not guarantee @NonNull field itemsets (line 68) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Hipo(int n_entradas, int t_ventana) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:225: error: [NullAway] dereferenced expression itemset is @Nullable
                            itemset.add(conjunto);
                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:231: error: [NullAway] dereferenced expression itemset is @Nullable
                            itemset.add(conjunto);
                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java:1719: error: [NullAway] dereferenced expression r_nueva is @Nullable
                GrupoElementos gn = r_nueva.getConsecuente();
                                           ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url4192078a2f_unsegnor_hipotetizador_tgz-pJ8-hipotetizador_MedirTiemposJ8/src/hipotetizador/Hipo.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
16 errors
